# liu

./: .clang-format  CMakeLists.txt  Makefile  expected.txt  flake.nix  log.txt  main.c  main.cpp
.cache/clangd/index/: main.cpp.C084DD5DD1C6C1EB.idx
corpus/: test.txt
corpus/mt-quotes/: bigrams.json  monograms.json  trigrams.json  words.json
corpus/shai/: bigrams.json  monograms.json  trigrams.json
includes/: simdjson.cpp
layouts/: qwerty  semimak
src/: main.cpp  v2.cpp
